<resources>
    <string name="app_name">HomeNet</string>
    <string-array name="tipoUsuario">
        <item>Huésped</item>
        <item>Anfitrión</item>
        <item>Guía</item>
    </string-array>

    <string-array name="genero">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string-array name="tipoAlojamiento">
        <item>Apartamento</item>
        <item>Habitación</item>
        <item>Apartaestudio</item>
        <item>Cabaña</item>
        <item>Pent house</item>
        <item>Atico</item>
    </string-array>

    <string-array name="cantidades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

    <string-array name="area">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
    </string-array>

    <string-array name="search_params">
        <item>Titulo</item>
        <item>Fecha</item>
    </string-array>
    <string name="usersample">Usuario 1</string>
    <string name="hintresenah">Ingrese una reseña del usuario.</string>
    <string name="guardar">Guardar</string>
    <string name="hintnombreanuncio">Ingrese el nombre de su anuncio.</string>
    <string name="hintdescrpanuncio">Describa su anuncio.</string>
    <string name="tarifa">Tarifa: </string>
    <string name="hintprecio">Digite el precio.</string>
    <string name="recorrido">Recorrido: </string>
    <string name="hintnuevaparada">Nueva parada</string>
    <string name="agregar">Agregar</string>
    <string name="sampletour">Tour 1</string>
    <string name="sampledescrptour">Descripción del tour</string>
    <string name="histserv">Historial Servicios</string>
    <string name="volver">Volver</string>
    <string name="editaranuncio">Editar Anuncio</string>
    <string name="hintsampleanuncio">El nombre de su anuncio</string>
    <string name="hintsampleanundescrp">La descripción de su anuncio.</string>
    <string name="sampleprecio">$$$$</string>
    <string name="nombreparada">Nombre parada</string>
    <string name="eliminar">Eliminar</string>
    <string name="sampleresena">Usuario que merece cinco estrellas.</string>
    <string name="historial">Historial</string>
    <string name="samplefecha">30/08/2018</string>
    <string name="calificar">Calificar</string>
    <string name="solserv">Solicitudes Servicios</string>
    <string name="principal">Menú Principal</string>

    <string name="comentario">Comentario...</string>
    <string name="hotel_budapest">Hotel Budapest</string>
    <string name="comentario_1">Fue una experiencia agradable</string>
    <string name="comentario_2">Me gusto mucho el lugar</string>
    <string name="persona_1">Santiago SL</string>
    <string name="persona_2">Santiash</string>
    <string name="estrellas">5 estrellas</string>
    <string name="fecha_1">18 de Octubre de 2017</string>
    <string name="fecha_2">20 de mayo de 2018</string>
    <string name="fecha_reserva_1">21-08-2018</string>
    <string name="fecha_reserva_2">01-06-2018</string>
    <string name="fecha_inicio_1">30-08-2018</string>
    <string name="fecha_inicio_2">11-06-2018</string>
    <string name="fecha_final_1">05-09-2018</string>
    <string name="fecha_final_2">12-06-2018</string>
    <string name="precio_1">3.000.000</string>
    <string name="precio_2">0</string>
    <string name="reserva_1">Completa</string>
    <string name="reserva_2">Terminada</string>
    <string name="info_alojamiento">Información del alojamiento</string>
    <string name="ver_ruta">Ver ruta</string>
    <string name="calificación">Calificación</string>
    <string name="reservar">Reservar</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="consultar_fecha">Buscar por fecha</string>
    <string name="consultar_ubicacion">Buscar por ubicación</string>
    <string name="num_huesped">2 huespedes</string>
    <string name="num_dormitorio">1 dormitorio</string>
    <string name="num_camas">2 camas</string>
    <string name="num_baños">1 baño</string>
    <string name="listo">Listo!</string>
    <string name="calificacion2">100 calificaciones</string>
    <string name="calificacion3">20 calificaciones</string>
    <string name="precio_noche1">44/noche</string>
    <string name="precio_noche2">45/noche</string>
    <string name="label_alojamiento">Alojamiento</string>
    <string name="label_reserva">Fecha de la reserva</string>
    <string name="label_inicio">Fecha de inicio</string>
    <string name="label_final">Fecha de ida</string>
    <string name="label_precio">Precio</string>
    <string name="label_estado">Estado de la reserva</string>
    <string name="direccion_origen">Dirección de origen</string>
    <string name="direccion_destino">Dirección de destino</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="Enviar">Enviar</string>
    <string name="Calificar">Calificar</string>
    <string name="CrearPerfil">Crear Perfil</string>
    <string name="VerMas">Ver mas</string>
    <string name="SolAceptadas">Solicitudes Aceptadas</string>
    <string name="Siguiente">Siguiente</string>
    <string name="VerTour">Ver Tour</string>
    <string name="Solicitar">Solicitar</string>
    <string name="ConsultarAloj">Consultar Alojamientos</string>
    <string name="VerHistReserv">Ver historial reservas</string>
    <string name="VerGuiasCerc">Ver guías cercanos</string>
    <string name="VerHistRec">Ver historial recorridos</string>
    <string name="selecc">Seleccionar</string>
    <string name="publicar">Publicar</string>
    <string name="escoger_imagenes">Sube las imagenes de tu alojamiento</string>

    <string name="buscar_alojamientos_titulo">Buscar Alojamientos</string>
    <string name="hint_keyword_hca">¿Qué buscas?</string>
    <string name="hint_start_date_hca">¿Desde cuándo? (DD/MM/YYYY)</string>
    <string name="hint_end_date_hca">¿Hasta cuándo? (DD/MM/YYYY)</string>
    <string name="hint_distance_hca">¿Qué tan lejos?</string>
    <string name="hint_place_hca">¿Dónde?</string>

    <string name="per_hight">por noche.</string>
    <string name="km">Km.</string>

    <string name="results_query">Resultados búsqueda</string>
    <string name="new_search">Nueva búsqueda</string>
    <string name="search">Buscar</string>
    <string name="map">Ver mapa</string>

    <string name="quantity">Usuarios inscritos:</string>
    <string name="price">Precio:</string>
    <string name="route">Ver recorrido</string>
    <string name="renew">Renovar</string>
    <string name="add_location">Añadir paradas</string>
    <string name="delete_location">Eliminar parada</string>
    <string name="select_location">Seleccionar parada</string>

    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="see">Ver</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="back">Volver</string>
    <string name="upload_pic">Cargar foto</string>
    <string name="date">Fecha:</string>
    <string name="hour">Hora:</string>
    <string name="delete_message">¿Está seguro de eliminar?</string>

    <string name="hint_name_tour">Digite el título de su tour.</string>
    <string name="hint_date_tour">Fecha (dd/mm/yyyy).</string>
    <string name="hint_hour_tour">Hora (hh:ss).</string>
    <string name="hint_duration_tour">Duración tour (horas).</string>
    <string name="hint_description_tour">Describa su tour.</string>
    <string name="hint_capacity_tour">¿Para cuántas personas?</string>
    <string name="hint_precio_tour">Digite el precio de su tour.</string>
    <string name="add_route">Agregar recorrido</string>
    <string name="edit_route">Editar recorrido</string>


    <!-- Bottom tab bar -->
    <string name="tours_title">Mis Toures</string>
    <string name="new_tour">Crear tour</string>
    <string name="history_tour">Historial toures</string>
    <string name="config">Mi perfil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_huesped_resultados_map">Map</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_guia_recorrido_tour">HomeNet</string>
    <string name="title_activity_guia_recorrido_editable">Map</string>
    <string name="title_activity_huesped_ver_recorrido_tour">Map</string>
    <string name="title_activity_huesped_buscar_tour_mapa">Map</string>
    <string name="title_activity_huesped_ver_ruta_destino">Map</string>
</resources>
