<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tours"
        android:icon="@drawable/ic_baseline_transfer_within_a_station_24px"
        android:title="@string/tours_title" />

    <item
        android:id="@+id/navigation_new_tour"
        android:icon="@drawable/ic_baseline_add_location_24px"
        android:title="@string/new_tour" />

    <item
        android:id="@+id/navigation_history_tours"
        android:icon="@drawable/ic_baseline_history_24px"
        android:title="@string/history_tour" />

    <item
        android:id="@+id/navigation_config"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/config" />

</menu>
