<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.guia.GuiaCrearTourActivity">


    <ScrollView
        android:id="@+id/svGET"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/clGET"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTituloGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_name_tour"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etFechaGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_date_tour"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btImageGET"
                app:layout_constraintTop_toBottomOf="@+id/etTituloGET" />

            <EditText
                android:id="@+id/etHoraGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_hour_tour"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btImageGET"
                app:layout_constraintTop_toBottomOf="@+id/etFechaGET" />

            <EditText
                android:id="@+id/etDuracionGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_duration_tour"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btImageGET"
                app:layout_constraintTop_toBottomOf="@+id/etHoraGET" />

            <EditText
                android:id="@+id/etDescripcionGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_description_tour"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDuracionGET" />

            <EditText
                android:id="@+id/etCapacidadGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/hint_capacity_tour"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDescripcionGET" />

            <EditText
                android:id="@+id/etPrecioGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/hintprecio"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/spMonedaGET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCapacidadGET" />

            <Spinner
                android:id="@+id/spMonedaGET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                app:layout_constraintBottom_toBottomOf="@+id/etPrecioGET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etPrecioGET" />

            <LinearLayout
                android:id="@+id/llButtonsGET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPrecioGET">

                <Button
                    android:id="@+id/btRecorridoGET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/edit_route"
                    android:textColor="@color/colorPrimary"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="424dp" />

                <Button
                    android:id="@+id/btGuardarGET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/save"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="480dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btImageGET"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/upload_pic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTituloGET" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clGET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/guia_navigation" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>